--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo": "^2.11.1",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
@@ -22,6 +24,7 @@
     "gatsby-plugin-styled-components": "^6.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-source-graphql": "^5.11.0",
+    "graphql-hooks": "^6.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.3"
