added RSS news feed

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-styled-components": "^6.11.0",
+    "gatsby-remark-responsive-iframe": "^6.11.1",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-source-graphql": "^5.11.0",
     "gatsby-source-rest-api": "^0.2.3",
+    "gatsby-transformer-remark": "^6.11.0",
     "graphql-hooks": "^6.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
